Closed Bug 1864459 Opened 8 months ago Closed 8 months ago

Intermittent /webmessaging/broadcastchannel/blobs.html | single tracking bug

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox119 --- unaffected
firefox120 --- unaffected
firefox121 --- fixed
firefox122 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: edenchuang)

References

(Regression)

Details

(Keywords: intermittent-failure, intermittent-testcase, regression, Whiteboard: [retriggered][stockwell disable-recommended])

Attachments

(1 file)

Filed by: sstanca [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=436030293&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Gmhle87vTk-5hZxgh9KwKQ/runs/0/artifacts/public/logs/live_backing.log


[task 2023-11-13T15:01:03.535Z] 15:01:03     INFO - TEST-PASS | /webmessaging/broadcastchannel/blobs.html | Blobs work on BroadcastChannel 
[task 2023-11-13T15:01:03.535Z] 15:01:03     INFO - TEST-UNEXPECTED-TIMEOUT | /webmessaging/broadcastchannel/blobs.html | Blobs work with workers on BroadcastChannel - Test timed out
[task 2023-11-13T15:01:03.537Z] 15:01:03     INFO - TEST-UNEXPECTED-TIMEOUT | /webmessaging/broadcastchannel/blobs.html | expected OK
[task 2023-11-13T15:01:03.537Z] 15:01:03     INFO - TEST-INFO took 10243ms
[task 2023-11-13T15:01:03.540Z] 15:01:03     INFO - PID 14751 | 1699887663536	Marionette	INFO	Stopped listening on port 45599
[task 2023-11-13T15:01:04.007Z] 15:01:04     INFO - PID 14751 | console.error: ({})
[task 2023-11-13T15:01:04.170Z] 15:01:04     INFO - Browser exited with return code 0
[task 2023-11-13T15:01:04.172Z] 15:01:04     INFO - Closing logging queue
[task 2023-11-13T15:01:04.174Z] 15:01:04     INFO - queue closed
[task 2023-11-13T15:01:04.187Z] 15:01:04     INFO - Application command: /builds/worker/workspace/build/application/firefox/firefox --marionette about:blank -profile /tmp/tmpdk212col
[task 2023-11-13T15:01:04.220Z] 15:01:04     INFO - Starting runner
[task 2023-11-13T15:01:04.898Z] 15:01:04     INFO - PID 15595 | ATTENTION: default value of option mesa_glthread overridden by environment.
[task 2023-11-13T15:01:04.930Z] 15:01:04     INFO - PID 15595 | 1699887664929	Marionette	INFO	Marionette enabled
[task 2023-11-13T15:01:04.998Z] 15:01:04     INFO - PID 15595 | ATTENTION: default value of option mesa_glthread overridden by environment.
[task 2023-11-13T15:01:05.022Z] 15:01:05     INFO - PID 15595 | 1699887665021	Marionette	INFO	Listening on port 39133
[task 2023-11-13T15:01:05.537Z] 15:01:05     INFO - PID 15411 | console.error: ({})
[task 2023-11-13T15:01:07.078Z] 15:01:07     INFO - TEST-START | /wasm/jsapi/memory/buffer.any.worker.html
[task 2023-11-13T15:01:07.331Z] 15:01:07     INFO - ....
[task 2023-11-13T15:01:07.331Z] 15:01:07     INFO - TEST-OK | /wasm/jsapi/memory/buffer.any.worker.html | took 250ms

R+B range.
This seems to be a regression from https://bugzilla.mozilla.org/show_bug.cgi?id=1836700
Eden, could you please take a look at this?

Flags: needinfo?(echuang)
Keywords: regression
Regressed by: 1836700

Set release status flags based on info from the regressing bug 1836700

Whiteboard: [stockwell needswork:owner] → [stockwell needswork:owner][retriggered]
Assignee: nobody → echuang
Flags: needinfo?(echuang)
See Also: → 1864809
Duplicate of this bug: 1864409
Pushed by echuang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6f07953990c0
WorkerPrivate::IsEligibleForCC should consider if there are any pending events. r=asuth
Status: NEW → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
See Also: → 1865774

Comment on attachment 9364299 [details]
Bug 1864459 - WorkerPrivate::IsEligibleForCC should consider if there are any pending events. r=asuth

Beta/Release Uplift Approval Request

  • User impact if declined: Workers could be GCed unexpectedly and functionality provided by Workers will be broken.
  • Is this code covered by automated tests?: Unknown
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The patch is not risky since it adds an extra check of whether pending events are on the worker thread.
  • String changes made/needed: No
  • Is Android affected?: Yes
Attachment #9364299 - Flags: approval-mozilla-beta?

I'd like to underline that failures are still present after latest patch, filed Bug 1865774 for tracking them.

The patch reduces the intermittent significantly, but there is still a chance that the Worker is GCed immediately.
Had already found the root cause and commented on the Bug 1865774. Will fix the edge case on the bug.

Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Status: REOPENED → RESOLVED
Closed: 8 months ago8 months ago
Resolution: --- → FIXED

Comment on attachment 9364299 [details]
Bug 1864459 - WorkerPrivate::IsEligibleForCC should consider if there are any pending events. r=asuth

Approved for 121.0b2.

Attachment #9364299 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: