Bug 1864459 - WorkerPrivate::IsEligibleForCC should consider if there are any pending events. r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D193984